i have change one pdf

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>I’m a software developer and here is my portfolio 
-                    website. Here you’ll learn about my journey as a 
-                    software developer. </p>
+                    <p>I'm a software developer, and this is my personal portfolio website.<br>Here, you can explore my development journey, the projects I've worked on, and how I've grown in the tech world. </p>
 
 
                     <div class="tab-titles">
@@ -114,9 +112,11 @@
             <div class="work">
                 <img src="image/work-1.png">
                 <div class="layer">
-                    <h3>Parallax Web Page</h3>
-                    <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the foreground content while scrolling.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Welcome to my ProfileModal!</h3>
+                    <p>Find all my social media links in one place — GitHub, LinkedIn, Twitter, Instagram, and more.
+Connect, explore, and share!</p>
+                <a href="https://amitkumar805.github.io/profilemodal.github.io/">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
